--- a/pyproject.toml
+++ b/pyproject.toml
@@ -78,6 +78,11 @@ ignore = [# Ignored rules
     "B008", # Ignore the use of functions as default argument in function signatures (common in FastAPI).
     "B017", # Ignore assert blind exception: `Exception`
 ]
-per-file-ignores = { "tests/*" = [
+[tool.ruff.lint.per-file-ignores]
+"tests/*" = [
     "S101", # Ignore use of asserting in test files
-] }
+    "S311", # Ignore use of pseudo-random generators in test files
+]
+"__main__.py" = [
+    "E402", # Ignore module level import not at top of files
+]
