--- a/src/radar_core/.env.template
+++ b/src/radar_core/.env.template
@@ -1,18 +1,27 @@
 # .env.template
 
+# --- App Settings ---
 # YML configuration file: create it in the same folder where is `settings.py` or set the absolute path to the file
 # e.g. for Docker container: `/home/default/app/settings.yml`
-SETTING_FILE=/home/default/app/settings.yml
-# Log settings
-ENABLE_FILE_LOGGING=true
+RADAR_SETTING_FILE=/home/default/app/settings.yml
+
+# --- Logging Settings ---
+RADAR_ENABLE_FILE_LOGGING=true
 # Log levels: 10.Debug, 20.Info, 30.Warning, 40.Error, 50.Critical
-LOG_LEVEL=20
-# DB settings
+RADAR_LOG_LEVEL=20
+
+# --- Performance Settings ---
+# Number of parallel workers for the analyzer.
+# Set to a positive integer (recommended for DEV), 0 or leave unset to use all available cores (recommended for PROD).
+RADAR_MAX_WORKERS=2
+
+# --- DB settings ---
 POSTGRES_HOST=set_your_host_here
 POSTGRES_PORT=5432
 POSTGRES_DB=set_your_db_here
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=set_your_pwd_here
+POSTGRES_WEBUSER_PASSWORD=
 # Optional DB settings
 POSTGRES_SSL_MODE=prefer
 POSTGRES_OPTIONS='-c search_path%3Dpublic'
