--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,4 @@
-# /meteor_dummy/.gitattributes
+# .gitattributes
 
 # Set default behavior, in case people don't have core.autocrlf set.
 * text=auto
