--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,18 +12,18 @@ requires-python = ">=3.13"
 dependencies = [
     "dotenvy-py~=0.1.0",
     "numba>=0.62.1",
-    "numpy~=2.3",
-    "polars~=1.31",
-    "psycopg~=3.2",
-    "psycopg-binary~=3.2",
-    "PyYAML~=6.0",
-    "setuptools~=80.9",
-    "SQLAlchemy~=2.0",
-    "yfinance~=0.2.65",
+    "numpy>=2.3",
+    "polars>=1.31",
+    "psycopg>=3.2",
+    "psycopg-binary>=3.2",
+    "PyYAML>=6.0",
+    "setuptools>=80.9",
+    "SQLAlchemy>=2.0",
+    "yfinance>=0.2.65",
     # --- For TA-Lib ---
-    # In Windows run manually: uv pip install https://github.com/cgohlke/talib-build/releases/download/v0.6.7/ta_lib-0.6.7-cp313-cp313-win_amd64.whl --no-cache-dir
+    # In Windows run manually: uv pip install https://github.com/cgohlke/talib-build/releases/download/v0.6.8/ta_lib-0.6.8-cp313-cp313-win_amd64.whl --no-cache-dir
     # In other systems (like Linux in Docker) use environment markers and install from PyPI.
-    'ta-lib==0.6.7; sys_platform != "win32"',
+    'ta-lib==0.6.8; sys_platform != "win32"',
 ]
 
 [dependency-groups]
