--- a/envs/.env.template
+++ b/envs/.env.template
@@ -1,27 +1,28 @@
-# .env.template
+# src/radar_core/.env.template
 
-# --- App Settings ---
+# --- APP SETTINGS ---
+# App environment: dev, test, prod
+RADAR_APP_ENV=dev
 # YML configuration file: create it in the same folder where is `settings.py` or set the absolute path to the file
-# e.g. for Docker container: `/home/default/app/settings.yml`
-RADAR_SETTING_FILE=/home/default/app/settings.yml
+# e.g. for Docker container: `/home/default/app/settings.yml` or `settings.yml` if copy to the same folder where is `settings.py`
+RADAR_SETTING_FILE=settings.yml
 
-# --- Logging Settings ---
+# --- LOGGING SETTINGS ---
 RADAR_ENABLE_FILE_LOGGING=true
 # Log levels: 10.Debug, 20.Info, 30.Warning, 40.Error, 50.Critical
 RADAR_LOG_LEVEL=20
 
-# --- Performance Settings ---
+# --- PERFORMANCE SETTINGS ---
 # Number of parallel workers for the analyzer.
 # Set to a positive integer (recommended for DEV), 0 or leave unset to use all available cores (recommended for PROD).
 RADAR_MAX_WORKERS=2
 
-# --- DB settings ---
-POSTGRES_HOST=set_your_host_here
+# --- POSTGRESQL SETTINGS ---
+POSTGRES_HOST=set_your_host
 POSTGRES_PORT=5432
-POSTGRES_DB=set_your_db_here
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=set_your_pwd_here
-POSTGRES_WEBUSER_PASSWORD=
-# Optional DB settings
+POSTGRES_DB=radar
+POSTGRES_USER=set_your_user
+POSTGRES_PASSWORD=set_your_password
+# Optional PostgreSQL settings
 POSTGRES_SSL_MODE=prefer
 POSTGRES_OPTIONS='-c search_path%3Dpublic'
