Add logic to clean based on env var RADAR_CLEAN_UNLISTED

--- a/envs/.env.template
+++ b/envs/.env.template
@@ -2,11 +2,12 @@
 
 # --- APP SETTINGS ---
 # App environment: dev, test, prod
-RADAR_APP_ENV=dev
+RADAR_ENV=dev
 # YML configuration file: create it in the same folder where is `settings.py` or set the absolute path to the file
 # e.g. for Docker container: `/home/default/app/settings.yml` or `settings.yml` if copy to the same folder where is `settings.py`
 RADAR_SETTING_FILE=settings.yml
-
+# If true, the ratios for symbols not listed in ‘settings.yml’' will be cleaned from the DB at the start of the `analyzer.py`
+RADAR_CLEAN_UNLISTED=false
 # --- LOGGING SETTINGS ---
 RADAR_ENABLE_FILE_LOGGING=true
 # Log levels: 10.Debug, 20.Info, 30.Warning, 40.Error, 50.Critical
