Refactor to add multiprocessing context to fix Linux/Docker deadlocks, enhance logging setup with `ExitStack` and improve verbosity-handling logic.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,4 +1,4 @@
-# Dockerfile
+# docker/Dockerfile
 
 # Stage 1 Builder: contains build tools to build the radar_core wheel
 # The --platform=$BUILDPLATFORM ensures this stage runs on your host's native architecture.
